[gd_scene load_steps=30 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=7]
[ext_resource path="res://Enemies/Ghost.png" type="Texture" id=8]
[ext_resource path="res://MainMenu/bionicle-training-card-font-2-4.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://GhostNPC/WavyTextShader.gdshader" type="Shader" id=10]
[ext_resource path="res://Light/LightDifuse2.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 4.0

[sub_resource type="CircleShape2D" id=9]
radius = 73.0069

[sub_resource type="CircleShape2D" id=10]
radius = 4.0

[sub_resource type="CircleShape2D" id=11]
radius = 5.0

[sub_resource type="Animation" id=15]
resource_name = "Dead"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.815686 ), Color( 1, 1, 1, 0.478431 ), Color( 1, 1, 1, 0.180392 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_Animation_Dead_Finished"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "Start"
length = 0.2
loop = true

[sub_resource type="Animation" id=13]
resource_name = "Stop"
length = 0.1

[sub_resource type="Animation" id=21]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "FadeOut"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="ShaderMaterial" id=24]
shader = ExtResource( 10 )
shader_param/height = 1.0
shader_param/frequency = 20.0
shader_param/speed = 3.0

[sub_resource type="DynamicFont" id=25]
size = 6
font_data = ExtResource( 9 )

[node name="Ghost" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 80
script = ExtResource( 7 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -10 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 20 )
animation = "walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.454902 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 15 )
anims/Start = SubResource( 12 )
anims/Stop = SubResource( 13 )

[node name="PositionTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 11 )
texture_scale = 0.02
color = Color( 0.631373, 0.870588, 1, 1 )
mode = 2

[node name="TextAnimation" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 21 )
anims/FadeOut = SubResource( 22 )
anims/RESET = SubResource( 23 )

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 24 )
margin_left = -61.0
margin_top = -49.0
margin_right = 61.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 25 )
text = "Zjem cie!"
align = 1
valign = 1
autowrap = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="PositionTimer" to="." method="_on_PositionTimer_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
